Fix layout issues with mobile navbars
Previously, the bottom buttons could be clipped out of view if a navbar
was visible on mobile. Now, we use maximum heights of 100% rather than
100vh so that the view will scale appropriately regardless of whether a
navbar is visible.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 100vh;
+  height: 100%;
   perspective: 1000px;
   width: 100vw;
 }
