--- a/src/AppSettings.css
+++ b/src/AppSettings.css
@@ -1,5 +1,5 @@
 .AppSettings-container {
-  height: calc(100vh - 3rem);
+  height: calc(100% - 3rem);
   max-height: 25rem;
   max-width: 100%;
   width: 35rem;
