--- a/src/Modal.css
+++ b/src/Modal.css
@@ -35,7 +35,7 @@
 }
 
 .Modal-children {
-  max-height: calc(100vh - 3rem);
+  max-height: calc(100% - 3rem);
   max-width: 100vw;
   overflow-y: auto;
 }
@@ -49,10 +49,11 @@
 .Modal-content {
   background: #f0f0f0;
   box-shadow: 8px 8px 16px hsla(0, 0%, 0%, 0.1);
-  max-height: 100vh;
+  max-height: 100%;
   max-width: 100vw;
   opacity: 0;
   outline: none;
+  overflow-y: auto;
   padding: 0.5rem;
   position: relative;
 }
@@ -70,7 +71,7 @@
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   left: 0;
   position: fixed;
